--- a/commandLine/config.json
+++ b/commandLine/config.json
@@ -1,13 +1,12 @@
 {
+  "modelType": "lora",
   "models": {
     "lora": {
+      "textLang": "ru",
       "1": "..\\models\\bert2\\bert_peft_level1",
       "2": "..\\models\\bert2\\bert_peft_level2_with_labels",
       "3": "",
-      "desc": {
-        "ru": "Модель на основе LORA",
-        "en": "LORA based model"
-      }
+      "description": "Модель на основе LORA для русского языка"
     }
   }
 }
