--- a/config.json
+++ b/config.json
@@ -1,15 +1,14 @@
 {
   "modelType": "lora",
-  "lang": "ru",
   "models": {
     "lora": {
       "textLang": "ru",
       "1": "models\\bert2\\bert_peft_level1",
       "2": "models\\bert2\\bert_peft_level2_with_labels",
       "3": "",
-      "desc": {
-        "ru": "Модель на основе LORA для русского языка",
-        "en": "LORA based model for russian language"
+      "description": {
+        "en": "Model based on LORA for russian language.",
+        "ru": "Модель на основе LORA для русского языка."
       }
     }
   }
