--- a/src/backend/config.json
+++ b/src/backend/config.json
@@ -1,8 +1,8 @@
 {
   "api": {
     "docker_host": "0.0.0.0",
-    "local_host": "localhost",
-    "port": 8080
+    "local_host": "0.0.0.0",
+    "port": 8000
   },
   "device": "cpu"
 }
