--- a/requirements_docker.txt
+++ b/requirements_docker.txt
@@ -1,7 +1,9 @@
-numpy==2.1.3
+numpy
 fastapi==0.115.12
-pandas==2.2.3
+pandas
 peft==0.15.2
 transformers==4.52.3
 uvicorn==0.34.2
 datasets==3.6.0
+safetensors>=0.4.2
+python-multipart
