--- a/src/backend/config.json
+++ b/src/backend/config.json
@@ -1,7 +1,6 @@
 {
   "api": {
-    "docker_host": "0.0.0.0",
-    "local_host": "0.0.0.0",
+    "host": "0.0.0.0",
     "port": 8000
   },
   "device": "cpu"
